# retail-analytics

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  REQUIREMENTS.md  docker-compose.yml  workspace.yaml
dagster_home/: dagster.yaml
docs/: ARCHITECTURE.md  DAGSTER_DBT_INTEGRATION.md  INGESTION_SIMULATOR.md  MASTER_DATA_STRATEGY.md
ingestion_simulator/: .env.example  Makefile  README.md  pyproject.toml
ingestion_simulator/src/ingestion_simulator/: cli.py  config.py  generator.py  starrocks.py
master_data/: Makefile  README.md  pyproject.toml
master_data/dagster_project/: definitions.py
master_data/dagster_project/assets/: dbt_assets.py
master_data/dbt_project/: dbt_project.yml  profiles.yml
master_data/dbt_project/models/marts/: dim_date.sql
master_data/src/master_data/: definitions.py
master_data/src/master_data/assets/: dbt_assets.py
retail_analytics/: Makefile  README.md  dagster.yaml  pyproject.toml
retail_analytics/dbt_project/: README.md  dbt_project.yml  profiles.yml
retail_analytics/dbt_project/models/marts/: dim_customer.sql  dim_product.sql  fact_daily_sales.sql  schema.yml
retail_analytics/dbt_project/models/staging/: schema.yml  sources.yml  stg_order_items.sql  stg_orders.sql
retail_analytics/src/retail_analytics/: definitions.py
retail_analytics/src/retail_analytics/assets/: dbt_assets.py  source_assets.py
retail_analytics/tests/: test_definitions.py
transformation_pipeline/: Makefile  README.md  pyproject.toml
transformation_pipeline/dagster_project/: definitions.py
transformation_pipeline/dagster_project/assets/: __init__.py  dbt_assets.py  source_assets.py
transformation_pipeline/dagster_project/resources/: starrocks.py
transformation_pipeline/dbt_project/: README.md  dbt_project.yml  profiles.yml
transformation_pipeline/dbt_project/macros/: starrocks_overrides.sql
transformation_pipeline/dbt_project/models/marts/: dim_customers.sql  dim_product.sql  fact_daily_sales.sql  schema.yml
transformation_pipeline/dbt_project/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
